# QEventBus

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  QEventBusConfig.cmake.in  eventdispatcher.cpp  eventdispatcher.h  global.h  qeventbus.cpp  qeventbus.h
src/utils/: contextobserver.h  eventpackagebuilder.h  invokableobserver.h  valuecastutil.h
test/: CMakeLists.txt  customtype.h  globaleventbus.cpp  globaleventbus.h  main.cpp  page1.cpp  page1.h  page1.ui  page2.cpp  page2.h  page2.ui
